# py-data-rules

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Makefile  README.md  README.rst  debug-logconf.yml  pyproject.toml
.github/workflows/: build_pages.yml  cicd.yml  pr_validation.yml  publish.yml
py_data_rules/: __init__.py  __main__.py  __version__.py  column.py  data_model.py  data_type.py  dsv.py  rule.py  rule_engine.py  rule_factory.py  schema.py  table.py  violation.py
tests/: test_column.py  test_data_model.py  test_datatype.py  test_demo.py  test_integration.py  test_rule_engine.py  test_rule_factory.py  test_schema.py
tests/resources/: module_data_model.py  module_rules.py  mooncake.csv  omd-x.csv  weather_observations_june.csv  weather_observations_may.csv
