[tool.poetry]
name = "py_data_rules"
version = "0.1.0"
description = "data quality framework"
authors = ["Vlaams Instituut voor de Zee (VLIZ) <opsci-dev@vliz.be>"]
readme = "README.md"
packages = [{include = "py_data_rules"}]
license = "MIT"

repository = "https://github.com/vliz-be-opsci/py-data-rules"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
pyyaml = "^6.0"

# Development tools
black = {version = "^23.3.0", optional = true}
isort = {version = "^5.12.0", optional = true}
flake8 = {version = "^6.0.0", optional = true}
pyrefly = {version = "^0.51.0", optional = true}

# Testing tools
pytest = {version = "^7.3.1", optional = true}
coverage = {version = "^7.2.5", optional = true}
python-dotenv = {version = "^1.0.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}

# Documentation tools
sphinx = {version = "^7.0.1", optional = true}

# Poetry has the dependencies groups, but those are not 
#   compatible with extras, widely used in the python-verse.
[tool.poetry.extras]
dev = ["black", "isort", "flake8", "pyrefly"]
tests = ["pytest", "coverage", "python-dotenv", "pytest-cov"]
docs = ["sphinx"]

[tool.poetry.scripts]
py_data_rules = "py_data_rules.__main__:main"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
